# HIT_CG

./: CMakeLists.txt  实验指导书-计算机图形学与虚拟现实2025秋.odg  计算机图形学与虚拟现实大作业报告模板（2025秋）.odt  计算机图形学与虚拟现实实验报告模板-2025秋.doc  计算机图形学与虚拟现实实验报告模板-2025秋.odt
final_work/: .gitignore  .~lock.计算机图形学与虚拟现实大作业报告模板（2025秋）.odt#  CMakeLists.txt  Doxyfile  README.md  read_ppm.py
final_work/images/: expr10_TM_gamma22.ppm  expr3.ppm  expr7_addedToneMapping.ppm  expr8_addedToneMapping.ppm  glass_dragon1_spp250.ppm  test_texture.ppm
final_work/include/: aabb.h  bvh.h  bvh_serializer.h  camera.h  hittable_list.hpp  hittable_obj.h  material.hpp  mesh_loader.h  plane.h  ray.h  renderer_common.h  renderer_path.h  renderer_pm.h  renderer_ppm.h  renderer_sppm.h  sphere.h  texture.hpp  triangle.h  utils.h  vec3.h
final_work/src/: main.cpp
final_work/邴海诺-2024112353-结课大作业实验代码/: CMakeLists.txt  README.md
final_work/邴海诺-2024112353-结课大作业实验代码/include/: camera.h  hittable_list.hpp  hittable_obj.h  material.hpp  ray.h  renderer_common.h  renderer_path.h  renderer_pm.h  renderer_ppm.h  sphere.h  texture.hpp  utils.h  vec3.h
final_work/邴海诺-2024112353-结课大作业实验代码/src/: main.cpp
final_work/验收/: pathtracing验收.md  光子映射pm.md  光子映射ppm.md  类和方法.md
lab1/: CMakeLists.txt  exprl.fs  exprl.vs  main.cpp  shader.cpp  shader.h  邴海诺-2024112353-第一次实验报告.doc
lab2/: CMakeLists.txt  Camera.hpp  expr2.fs  learnopengl.cpp  shader.cpp  shader.h  (+1 more)
lab3/: main.cpp  (+1 more)
lab4/: CMakeLists.txt  main.cpp  邴海诺-2024112353-第4次实验报告.odt
lab4/res/: exp4_circle.frag  exp4_circle.vert  expr4_quad.frag  expr4_quad.vert
lab4/src/: Camera.hpp
(+7 files in other folders)
